spliiting the models
