# cmd/api/docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.NewAdminInfo"
+                            "$ref": "#/definitions/request.NewAdminInfo"
                         }
                     }
                 ],
@@ -333,7 +333,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.AdminLoginInfo"
+                            "$ref": "#/definitions/request.AdminLoginInfo"
                         }
                     }
                 ],
@@ -1535,21 +1535,6 @@
                 }
             }
         },
-        "model.AdminLoginInfo": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "model.BlockUser": {
             "type": "object",
             "properties": {
@@ -1558,32 +1543,6 @@
                 },
                 "user_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "model.NewAdminInfo": {
-            "type": "object",
-            "required": [
-                "email",
-                "password",
-                "phone",
-                "user_name"
-            ],
-            "properties": {
-                "email": {
-                    "description": "Email    string `json:\"email\" validate:\"required,email\"`",
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string",
-                    "maxLength": 10,
-                    "minLength": 10
-                },
-                "user_name": {
-                    "type": "string"
                 }
             }
         },
@@ -1731,6 +1690,47 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.AdminLoginInfo": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.NewAdminInfo": {
+            "type": "object",
+            "required": [
+                "email",
+                "password",
+                "phone",
+                "user_name"
+            ],
+            "properties": {
+                "email": {
+                    "description": "Email    string `json:\"email\" validate:\"required,email\"`",
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
