# pkg/model/request/admin.go
@@ -1,8 +1,6 @@
-package model
+package request
 
-//no need,, spliited to models folder,,, delete after few days
-
-/*
+//model structs used for input
 
 type NewAdminInfo struct {
 	UserName string `json:"user_name" validate:"required"`
@@ -16,14 +14,3 @@ type AdminLoginInfo struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required"`
 }
-*/
-
-/*
-type AdminDataOutput struct {
-	ID           uint
-	UserName     string
-	Email        string
-	Phone        string
-	IsSuperAdmin bool
-}
-*/
