# pkg/model/response/admin.go
@@ -1,0 +1,11 @@
+package response
+
+//model structs used to output data
+
+type AdminDataOutput struct {
+	ID           uint
+	UserName     string
+	Email        string
+	Phone        string
+	IsSuperAdmin bool
+}
